Build adjustments for Java 21 & good JDBC support
- Enable JDK preview features;
- Include provided JDBC driver as a manifest entry/dependency - this is needed to load driver specific classes into the application classpath;
- Add a force stop flag to only restart the postgres container at initialization and not for every execution;
- Drop Hibernate ORM as a JDBC wrapper is in development;
- Add JetBrains annotations to improve IDE syntax highlighting;
- Set webpack build to be invoked only at maven's package phase.